--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
 
 dependencies {
     ext {
-        android_support_version = '28.0.0-rc01'
+        android_support_version = '27.1.0'
         retrofit_version = '2.3.0'
         glide_version = '4.7.1'
         dagger_version = '2.15'
@@ -62,7 +62,6 @@ dependencies {
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
-
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
